--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,5 @@
 /* Add Source Code Pro font */
-@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;500;600;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;500;600;700&display=swap");
 
 html,
 body {
@@ -17,4 +17,4 @@ a {
 
 * {
   box-sizing: border-box;
-}
+} */
